# libOnix

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.md  build.xml  checkBindingsMatchReference.py
bindings-php/: CMakeLists.txt
bindings-php/examples/: example_greeting.php
bindings-php/src/: main.cpp
bindings-python/: CMakeLists.txt  Makefile
bindings-python/examples/: drawing.py  example_helloWorld.py  example_rotations.py  helloWorld.py  rotations.py
bindings-python/src/: pysurface.cpp
bindings-ruby/examples/: drawing.rb
examples/: diagonalLines.cpp  drawing.cpp  helloWorld.cpp  planform.cpp  rotations.cpp
src/: common.hpp  examples.cpp  main.cpp  surface.cpp  surface.hpp
tests/: test.cpp
var/: rpm-fedora.spec
